minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio-service
  namespace: file-share
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9000
  - name: console
    port: 80
    targetPort: 9001
  selector:
    app: minio
